[tool.poetry]
name = "ballyregan"
version = "1.0.1"
description = "Find fetch & validate free proxies fast."
authors = ["idandaniel <idandaniel12@gmail.com>"]
license = "Apache License, Version 2.0"
readme = "README.md"

packages = [
    {include = "cli", from="src"},
    {include = "ballyregan", from="src"},
]

keywords = [
    "python",
    "proxy",
    "http-proxy",
    "https-proxy",
    "socks-proxy",
    "proxy-list",
    "proxy-checker",
    "python-proxy",
    "proxy-fetcher",
    "get-proxy"
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.0"
pydantic = "^1.10.2"
loguru = "^0.6.0"
requests = {extras = ["socks"], version = "^2.28.1"}
Faker = "^15.1.1"
lxml = "^4.9.1"
bs4 = "^0.0.1"
click = "^8.1.3"
prettytable = "^3.4.1"
typer = {extras = ["all"], version = "^0.6.1"}
grequests = "^0.6.0"
gevent = "^22.10.1"
urllib3 = {extras = ["socks"], version = "^1.26.12"}
pythonping = "^1.1.4"
update = "^0.0.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
ballyregan = "cli.app:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"