[tool.poetry]
name = "ballyregan"
version = "1.0.6"
description = "Find fetch & validate free proxies fast."
authors = ["idandaniel <idandaniel12@gmail.com>"]
license = "Apache License, Version 2.0"
readme = "README.md"

packages = [
    {include = "cli", from="src"},
    {include = "ballyregan", from="src"},
]

keywords = [
    "python",
    "proxy",
    "http-proxy",
    "https-proxy",
    "socks-proxy",
    "proxy-list",
    "proxy-checker",
    "python-proxy",
    "proxy-fetcher",
    "free-proxy",
    "get-proxy",
    "proxy-finder",
    "find-proxy"
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.0"
pydantic = "^1.10.2"
loguru = "^0.6.0"
Faker = "^15.1.1"
lxml = "^4.9.1"
click = "^8.1.3"
prettytable = "^3.4.1"
typer = {extras = ["all"], version = "^0.6.1"}
update = "^0.0.1"
aiohttp = "^3.8.3"
aiohttp-proxy = "^0.1.2"
html5lib = "^1.1"
requests = "^2.28.1"
bs4 = "^0.0.1"
strenum = "^0.4.10"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
requests-mock = "^1.10.0"
coverage = "^6.5.0"
pytest-socket = "^0.5.1"
pytest-asyncio = "^0.20.2"
aioresponses = "^0.7.3"

[tool.poetry.scripts]
ballyregan = "cli.app:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
